--- a/roadmap.html
+++ b/roadmap.html
@@ -9,19 +9,19 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.BaubUEow.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.kC4cc2bo.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BhAA5gO4.js">
+		<link href="./app/immutable/assets/0.DzWwnDUo.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.BdZH128h.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.-dAndRva.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CZFz4ltc.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.CotyiN8x.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BkSmf7Fz.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BDEZAumP.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CIguEhIb.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.B0V34r8J.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/16.BkRNxWVr.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1fa0amp = {
+					__sveltekit_h24wad = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.kC4cc2bo.js"),
-						import("./app/immutable/entry/app.BkSmf7Fz.js")
+						import("./app/immutable/entry/start.BdZH128h.js"),
+						import("./app/immutable/entry/app.BDEZAumP.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 16],
