--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.kC4cc2bo.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BhAA5gO4.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.BdZH128h.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.-dAndRva.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.CZFz4ltc.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.CotyiN8x.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.BkSmf7Fz.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.BDEZAumP.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.Bt2SUrO2.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1fa0amp = {
+					__sveltekit_h24wad = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.kC4cc2bo.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.BkSmf7Fz.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.BdZH128h.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.BDEZAumP.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
