--- a/helpcenter.html
+++ b/helpcenter.html
@@ -11,18 +11,18 @@
 		
 		<link href="./app/immutable/assets/0.DzWwnDUo.css" rel="stylesheet">
 		<link href="./app/immutable/assets/11.BoDWe5Zb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BvqEbBDu.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CPavj-Ji.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.BXytEJXo.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DoyiEB7v.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.BF_lw6h7.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.CVFKC7c5.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BKVvjYkj.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DvQ-bbYL.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.D_6sVACJ.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.Bx2FOF4T.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/11.BZLRuR0u.js"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_ipvcpm = {
+					__sveltekit_ndb44e = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -65,8 +65,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.BvqEbBDu.js"),
-						import("./app/immutable/entry/app.BKVvjYkj.js")
+						import("./app/immutable/entry/start.BXytEJXo.js"),
+						import("./app/immutable/entry/app.DvQ-bbYL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
