--- a/roadmap.html
+++ b/roadmap.html
@@ -9,19 +9,19 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.DzWwnDUo.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BXytEJXo.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DoyiEB7v.js">
+		<link href="./app/immutable/assets/0.rpl2eCSA.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.B7nGs-Eh.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.n1M8JLNW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CVFKC7c5.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.BAivfpGJ.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.DvQ-bbYL.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.D5uyhb_Z.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.Bx2FOF4T.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CfFMLkkw.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/17.BkRNxWVr.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_ndb44e = {
+					__sveltekit_1f1zecf = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.BXytEJXo.js"),
-						import("./app/immutable/entry/app.DvQ-bbYL.js")
+						import("./app/immutable/entry/start.B7nGs-Eh.js"),
+						import("./app/immutable/entry/app.D5uyhb_Z.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 17],
