--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.BXytEJXo.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.DoyiEB7v.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.B7nGs-Eh.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.n1M8JLNW.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.DxYSeDj_.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.CVFKC7c5.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.BAivfpGJ.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.DvQ-bbYL.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.D5uyhb_Z.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DqKnQWcm.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DQ_PoM8M.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.Bt2SUrO2.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ndb44e = {
+					__sveltekit_1f1zecf = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.BXytEJXo.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.DvQ-bbYL.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.B7nGs-Eh.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.D5uyhb_Z.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
