--- a/QADR.html
+++ b/QADR.html
@@ -9,7 +9,7 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.DzWwnDUo.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.rpl2eCSA.css" rel="stylesheet">
 		<link href="./app/immutable/assets/9.tn0RQdqM.css" rel="stylesheet"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
