--- a/algopilot.html
+++ b/algopilot.html
@@ -9,22 +9,22 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.rpl2eCSA.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.CfoLKslz.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BNQglUSu.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/runtime.DxYSeDj_.js">
+		<link href="./app/immutable/assets/0.Bs90br9P.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.CnEj3TIG.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.Dfy5TjL0.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.B1MExCkC.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/index-client.-S7f-HZl.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.2u0utMPu.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/render.DqKnQWcm.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DQ_PoM8M.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/template.Bt2SUrO2.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.BuOpwVdi.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.C2xKuiUt.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.C9Xz4LI7.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/attributes.DrFL_0gW.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CNhsmWtQ.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/4.DhyWoDpn.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/4.BwdiEDV9.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/graphnetwork.PkMY6-Xw.js"><!--[--><meta name="description" content="test"><!--]--><title>Algopilot</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_fdyu0q = {
+					__sveltekit_1vurtbx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -45,8 +45,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.CfoLKslz.js"),
-						import("./app/immutable/entry/app.2u0utMPu.js")
+						import("./app/immutable/entry/start.CnEj3TIG.js"),
+						import("./app/immutable/entry/app.C2xKuiUt.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
