--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.DLVbFylF.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C1wxNP_A.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.Ca_NRsCD.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.fITQh0F-.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.Bg_1GCJy.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.BfWd4mtR.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.CgxL2H3w.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.BKX7vD-p.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.BsQ56n95.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_eedrkm = {
+					__sveltekit_19fhna3 = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.DLVbFylF.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.CgxL2H3w.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.Ca_NRsCD.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.BKX7vD-p.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
