--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.v3mMUbBO.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BUrqLU5T.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.BwHtKrkz.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.BLfMMKCy.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.B5GfP0Ky.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.DvZvtDwL.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.CGRZfoAv.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.CTxGlonw.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.BsQ56n95.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1xe9qyj = {
+					__sveltekit_mlg1 = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.v3mMUbBO.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.CGRZfoAv.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.BwHtKrkz.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.CTxGlonw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
