--- a/blog.html
+++ b/blog.html
@@ -10,18 +10,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.Bs90br9P.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.v3mMUbBO.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BUrqLU5T.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.BwHtKrkz.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.BLfMMKCy.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.B5GfP0Ky.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.DvZvtDwL.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.CGRZfoAv.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.CTxGlonw.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.dexzxkkr.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.CctElmHm.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/5.DGaoGkzw.js"><!--[--><meta name="description" content="Svelte demo app"><!--]--><title>Blog</title>
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_1xe9qyj = {
+					__sveltekit_mlg1 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.v3mMUbBO.js"),
-						import("./app/immutable/entry/app.CGRZfoAv.js")
+						import("./app/immutable/entry/start.BwHtKrkz.js"),
+						import("./app/immutable/entry/app.CTxGlonw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 5],
