--- a/helpcenter.html
+++ b/helpcenter.html
@@ -10,22 +10,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.Bs90br9P.css" rel="stylesheet">
-		<link href="./app/immutable/assets/11.BoDWe5Zb.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BwHtKrkz.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BLfMMKCy.js">
+		<link href="./app/immutable/assets/17.BoDWe5Zb.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Dq7zQu8E.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.AS1_nQLG.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.DvZvtDwL.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.DDShqHkg.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.CTxGlonw.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DEdK2AUM.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CctElmHm.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.55f5Xioi.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/11.BHqNF6PY.js"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
+		<link rel="modulepreload" href="./app/immutable/nodes/17.DQGzRxXE.js"><!--[--><meta name="description" content="About this app"><!--]--><title>About</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1q4g7a0"><div class="corner svelte-1q4g7a0"><a href="./" class="svelte-1q4g7a0"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="logo" class="svelte-1q4g7a0"></a></div> <div class="corner svelte-1q4g7a0"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1q4g7a0" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><div class="top-area"><h1>Help Center</h1> <h4>We're here to assist you every step of the way! 
@@ -57,7 +57,7 @@
 			
 			<script>
 				{
-					__sveltekit_mlg1 = {
+					__sveltekit_y4hx25 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -65,11 +65,11 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.BwHtKrkz.js"),
-						import("./app/immutable/entry/app.CTxGlonw.js")
+						import("./app/immutable/entry/start.Dq7zQu8E.js"),
+						import("./app/immutable/entry/app.DEdK2AUM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 11],
+							node_ids: [0, 17],
 							data: [null,null],
 							form: null,
 							error: null
