--- a/algopilot.html
+++ b/algopilot.html
@@ -10,21 +10,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.Bs90br9P.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.BwHtKrkz.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BLfMMKCy.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Dq7zQu8E.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.AS1_nQLG.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.DvZvtDwL.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.DDShqHkg.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.CTxGlonw.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DEdK2AUM.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.CctElmHm.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.55f5Xioi.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/4.C8gEfjUD.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/4.hP5jyJGV.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/graphnetwork.PkMY6-Xw.js"><!--[--><meta name="description" content="test"><!--]--><title>Algopilot</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_mlg1 = {
+					__sveltekit_y4hx25 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -45,8 +45,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.BwHtKrkz.js"),
-						import("./app/immutable/entry/app.CTxGlonw.js")
+						import("./app/immutable/entry/start.Dq7zQu8E.js"),
+						import("./app/immutable/entry/app.DEdK2AUM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
