--- a/roadmap.html
+++ b/roadmap.html
@@ -9,19 +9,19 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.CgQAGuGr.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.T41afGB_.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.C5r7rRQq.js">
+		<link href="./app/immutable/assets/0.CECDgNny.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.DwcUubLX.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.t6VdJdmf.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CqTjh7Sk.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.wVlEl7lY.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BgOv93ux.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BmHSjpuv.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.D-G-GzJZ.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.Bs99iBTv.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/23.BkRNxWVr.js">
@@ -31,7 +31,7 @@
 			
 			<script>
 				{
-					__sveltekit_44qfdq = {
+					__sveltekit_10gajdg = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -39,8 +39,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.T41afGB_.js"),
-						import("./app/immutable/entry/app.BgOv93ux.js")
+						import("./app/immutable/entry/start.DwcUubLX.js"),
+						import("./app/immutable/entry/app.BmHSjpuv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 23],
