--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.T41afGB_.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.C5r7rRQq.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/start.DwcUubLX.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/entry.t6VdJdmf.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.CqTjh7Sk.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/paths.wVlEl7lY.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.BgOv93ux.js">
+		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/entry/app.BmHSjpuv.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="/alparslan-labs.github.io/app/immutable/chunks/template.BsQ56n95.js">
@@ -25,7 +25,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_44qfdq = {
+					__sveltekit_10gajdg = {
 						base: "/alparslan-labs.github.io",
 						assets: "/alparslan-labs.github.io"
 					};
@@ -33,8 +33,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/alparslan-labs.github.io/app/immutable/entry/start.T41afGB_.js"),
-						import("/alparslan-labs.github.io/app/immutable/entry/app.BgOv93ux.js")
+						import("/alparslan-labs.github.io/app/immutable/entry/start.DwcUubLX.js"),
+						import("/alparslan-labs.github.io/app/immutable/entry/app.BmHSjpuv.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
