--- a/impressum.html
+++ b/impressum.html
@@ -9,7 +9,7 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.Dw-4YvVk.css" rel="stylesheet">
+		<link href="./app/immutable/assets/0.CECDgNny.css" rel="stylesheet">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1q4g7a0"><div class="corner svelte-1q4g7a0"><a href="./" class="svelte-1q4g7a0"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="logo" class="svelte-1q4g7a0"></a></div> <div class="corner svelte-1q4g7a0"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1q4g7a0" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><!---->Inhaltlich verantwortlich gem. § 55 Staatsvertrag für Rundfunk und Telemedien (Rundfunk-Staatsvertrag) und Anbieter gem. § 5 Telemediengesetz (TMG) ist:
