--- a/algopilot.html
+++ b/algopilot.html
@@ -9,22 +9,22 @@
 		<!--<link href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">-->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./app/immutable/assets/0.Dw-4YvVk.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.ILKSzqRk.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.Bpkhl6oY.js">
+		<link href="./app/immutable/assets/0.CECDgNny.css" rel="stylesheet">
+		<link rel="modulepreload" href="./app/immutable/entry/start.CKKc8din.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DMEoLSnC.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.CMZjdKfu.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.Du-qrAAS.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.CT0aXGFv.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.Bl_QpWdF.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.BmLhOTJE.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.DPL7-Dpg.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/4.B10dG3wO.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/4.DfwioWoG.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/graphnetwork.PkMY6-Xw.js"><!--[--><meta name="description" content="test"><!--]--><title>Algopilot</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -37,7 +37,7 @@
 			
 			<script>
 				{
-					__sveltekit_weya57 = {
+					__sveltekit_9qvtv8 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -45,8 +45,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.ILKSzqRk.js"),
-						import("./app/immutable/entry/app.CT0aXGFv.js")
+						import("./app/immutable/entry/start.CKKc8din.js"),
+						import("./app/immutable/entry/app.Bl_QpWdF.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
