--- a/demo.html
+++ b/demo.html
@@ -11,28 +11,28 @@
 		
 		<link href="./app/immutable/assets/0.CECDgNny.css" rel="stylesheet">
 		<link href="./app/immutable/assets/15.tn0RQdqM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.CKKc8din.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.DMEoLSnC.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.sbkmxuCY.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.CWJfKvdD.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/runtime.CkZ10TKx.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BFqC5wTN.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/paths.Du-qrAAS.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/paths.B4EIsidS.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index-client.DTbjmbw2.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.Bl_QpWdF.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.nmILnv4S.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/render.DSSPWdWO.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/svelte-head.DdHCPlh0.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/template.BsQ56n95.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/disclose-version.Bg9kRutz.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/0.DPL7-Dpg.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/0.e6gTfUDb.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/attributes.COvB-EjU.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/legacy.CtaTdtmd.js">
-		<link rel="modulepreload" href="./app/immutable/nodes/15.UVEKhNmM.js">
+		<link rel="modulepreload" href="./app/immutable/nodes/15.DL56iS08.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><div class="app svelte-1663mbs"><header class="svelte-1q4g7a0"><div class="corner svelte-1q4g7a0"><a href="./" class="svelte-1q4g7a0"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="logo" class="svelte-1q4g7a0"></a></div> <div class="corner svelte-1q4g7a0"><div class="w3-sidebar w3-bar-block w3-medium sidebar-auto svelte-1q4g7a0" style="width:42px; right: 0; position: fixed; background-color: transparent;"><a href="./" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Home"><i class="fa fa-home"></i></a> <a href="./contact/" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="Messages"><i class="fa fa-envelope"></i></a> <a href="http://d4t-e2h8.onrender.com" class="w3-bar-item w3-button svelte-1q4g7a0" aria-label="ff"><i class="fa fa-solid fa-chart-simple"></i></a></div></div></header><!----> <main class="svelte-1663mbs"><!----><!----><!----></main> <footer class="svelte-1663mbs"><div class="footer-container svelte-1663mbs"><div class="footer-column svelte-1663mbs"><h3 class="svelte-1663mbs">Topics</h3> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./company" class="svelte-1663mbs">Company</a></li> <li class="svelte-1663mbs"><a href="./products" class="svelte-1663mbs">Products</a></li> <li class="svelte-1663mbs"><a href="./research" class="svelte-1663mbs">Research</a></li></ul></div> <div class="footer-column svelte-1663mbs"><h3 class="svelte-1663mbs">Products</h3> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./HARP" class="svelte-1663mbs">HARP</a></li> <li class="svelte-1663mbs"><a href="./algopilot" class="svelte-1663mbs">Algopilot</a></li> <li class="svelte-1663mbs"><a href="./QADR" class="svelte-1663mbs">QADR</a></li></ul></div> <div class="footer-column svelte-1663mbs"><h4>Company</h4> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./about" class="svelte-1663mbs">About</a></li> <li class="svelte-1663mbs"><a href="./blog" class="svelte-1663mbs">Blog</a></li> <li class="svelte-1663mbs"><a href="./codex" class="svelte-1663mbs">Codex</a></li></ul></div> <div class="footer-column svelte-1663mbs"><h3 class="svelte-1663mbs">Support</h3> <ul class="svelte-1663mbs"><li class="svelte-1663mbs"><a href="./helpcenter" class="svelte-1663mbs">Help Center</a></li> <li class="svelte-1663mbs"><a href="./contact" class="svelte-1663mbs">Contact</a></li></ul></div> <div class="footer-column svelte-1663mbs"><a href="./" class="svelte-1663mbs"><img src="/alparslan-labs.github.io/app/immutable/assets/eagle.DeqiSiVh.png" alt="Seljuq" width="25px"></a></div></div> <hr width="90%" size="1" noshade=""> <div class="footer-bottom svelte-1663mbs"><p><a href="https://github.com/alparslan-labs" aria-label="GitHub" class="svelte-1663mbs"><i class="fa fa-brands fa-github svelte-1663mbs"></i></a> <a href="https://x.com" aria-label="Twitter" class="svelte-1663mbs"><i class="fa fa-brands fa-x-twitter svelte-1663mbs"></i></a> <a href="https://x.com" aria-label="Facebook" class="svelte-1663mbs"><i class="fa fa-brands fa-facebook svelte-1663mbs"></i></a> <a href="https://linkedin.com" aria-label="LinkedIn" class="svelte-1663mbs"><i class="fa fa-brands fa-linkedin svelte-1663mbs"></i></a> <a href="https://github.com" aria-label="Telegram" class="svelte-1663mbs"><i class="fa fa-brands fa-telegram svelte-1663mbs"></i></a> <a href="https://github.com" aria-label="Instagram" class="svelte-1663mbs"><i class="fa fa-brands fa-instagram svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="Twitch" class="svelte-1663mbs"><i class="fa fa-brands fa-twitch svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="YouTube" class="svelte-1663mbs"><i class="fa fa-brands fa-youtube svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="TikTok" class="svelte-1663mbs"><i class="fa fa-brands fa-tiktok svelte-1663mbs"></i></a> <a href="https://svelte.dev/docs/kit" aria-label="Discord" class="svelte-1663mbs"><i class="fa fa-brands fa-discord svelte-1663mbs"></i></a></p> © 2025 YourCompany. All Rights Reserved.</div></footer></div><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_9qvtv8 = {
+					__sveltekit_le16jh = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/alparslan-labs.github.io"
 					};
@@ -40,8 +40,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./app/immutable/entry/start.CKKc8din.js"),
-						import("./app/immutable/entry/app.Bl_QpWdF.js")
+						import("./app/immutable/entry/start.sbkmxuCY.js"),
+						import("./app/immutable/entry/app.nmILnv4S.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 15],
